[gd_scene load_steps=3 format=3 uid="uid://csdnju38rqee8"]

[ext_resource type="Script" path="res://scenes/scripts/main/stage_manager.gd" id="1_7rybp"]
[ext_resource type="Script" path="res://scenes/scripts/main/threat_generator.gd" id="1_x4heg"]

[node name="StageManager" type="Node"]
script = ExtResource("1_7rybp")
debug = true

[node name="ThreatGenerator" type="Node" parent="."]
script = ExtResource("1_x4heg")

[node name="ScreenArea" type="Control" parent="ThreatGenerator"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnArea" type="ReferenceRect" parent="ThreatGenerator/ScreenArea"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -219.0
offset_right = 144.0
offset_bottom = 219.0
grow_horizontal = 0
grow_vertical = 2

[node name="BottomSpawnPos" type="Marker2D" parent="ThreatGenerator/ScreenArea/SpawnArea"]
position = Vector2(39, 438)

[node name="CenterSpawnPos" type="Marker2D" parent="ThreatGenerator/ScreenArea/SpawnArea"]
position = Vector2(39, 219)

[node name="TopSpawnPos" type="Marker2D" parent="ThreatGenerator/ScreenArea/SpawnArea"]
position = Vector2(39, 0)

[node name="EnemiesContainer" type="Node2D" parent="."]

[node name="ItemsContainer" type="Node2D" parent="."]

[connection signal="enemy_spawned" from="ThreatGenerator" to="." method="_on_threat_spawned_relay"]
